# ESG-Weather-Tracker

./: .dockerignore  .gitignore  Dockerfile  auto.bat  controller.py  db_connection.py  docker-compose.yml  graph.py  main.py  manual.bat  read_weather_api.py  requirements.txt  weather.py
.github/workflows/: frontend_deploy.yml  keep_alive.yml  plot_results.yml  register_weather.yml
backend/: Dockerfile  api.py  pyproject.toml  requirements.txt  weather.py
backend/src/: api.py  db_connection.py  env.py  main.py  read_weather_api.py  weather.py
frontend/: .env.development  .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  WeatherChart.tsx
